--- a/composer.json
+++ b/composer.json
@@ -12,12 +12,9 @@
         "php": ">=5.4.0",
         "illuminate/database": "~5.0"
     },
-    "require-dev": {
-        "codeception/codeception": "*"
-    },
     "autoload": {
-        "psr-0": {
-            "Lawrence\\FastMigrate": "src/"
+        "psr-4": {
+            "FastMigrate\\": "src/FastMigrate/"
         }
     }
 }
