--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,10 @@
         "php": ">=5.4.0",
         "illuminate/database": "~5.0"
     },
+    "require-dev": {
+        "laravel/laravel": "~5.0",
+        "codeception/codeception": "*"
+    },
     "autoload": {
         "psr-4": {
             "FastMigrate\\": "src/FastMigrate/"
